calc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> if_else
Rule 2     calc -> if
Rule 3     calc -> while_do
Rule 4     calc -> read TERM
Rule 5     calc -> print TERM
Rule 6     calc -> var_assign TERM
Rule 7     calc -> expression
Rule 8     calc -> empty
Rule 9     if_else -> IF LEFT_PAR expression RIGHT_PAR then_statement else_statement
Rule 10    if -> IF LEFT_PAR expression RIGHT_PAR then_statement
Rule 11    then_statement -> THEN calc_2
Rule 12    else_statement -> ELSE calc_2
Rule 13    while_do -> WHILE LEFT_PAR expression RIGHT_PAR do_statement
Rule 14    do_statement -> DO print
Rule 15    calc_2 -> if_else
Rule 16    calc_2 -> if
Rule 17    calc_2 -> while_do
Rule 18    calc_2 -> read TERM
Rule 19    calc_2 -> print TERM
Rule 20    calc_2 -> var_assign TERM
Rule 21    calc_2 -> expression
Rule 22    calc_2 -> LEFT_KEY calc_2 RIGHT_KEY
Rule 23    calc_2 -> calc_2 calc_2
Rule 24    var_assign -> NAME EQUALS expression
Rule 25    read -> NAME EQUALS INPUT
Rule 26    print -> PRINT LEFT_PAR expression RIGHT_PAR
Rule 27    expression -> expression MULTIPLY expression
Rule 28    expression -> expression DIVIDE expression
Rule 29    expression -> expression PLUS expression
Rule 30    expression -> expression MINUS expression
Rule 31    expression -> expression LESSTHAN expression
Rule 32    expression -> expression LESSTHANEQ expression
Rule 33    expression -> expression GREATTHAN expression
Rule 34    expression -> expression GREATTHANEQ expression
Rule 35    expression -> expression NOTEQUAL expression
Rule 36    expression -> expression ISEQUAL expression
Rule 37    expression -> LEFT_PAR expression RIGHT_PAR
Rule 38    expression -> MINUS expression
Rule 39    expression -> INT
Rule 40    expression -> FLOAT
Rule 41    expression -> NAME
Rule 42    empty -> <empty>

Terminals, with rules where they appear

DIVIDE               : 28
DO                   : 14
ELSE                 : 12
EQUALS               : 24 25
FLOAT                : 40
GREATTHAN            : 33
GREATTHANEQ          : 34
IF                   : 9 10
INPUT                : 25
INT                  : 39
ISEQUAL              : 36
LEFT_KEY             : 22
LEFT_PAR             : 9 10 13 26 37
LESSTHAN             : 31
LESSTHANEQ           : 32
MINUS                : 30 38
MULTIPLY             : 27
NAME                 : 24 25 41
NOTEQUAL             : 35
PLUS                 : 29
PRINT                : 26
RIGHT_KEY            : 22
RIGHT_PAR            : 9 10 13 26 37
TERM                 : 4 5 6 18 19 20
THEN                 : 11
WHILE                : 13
error                : 

Nonterminals, with rules where they appear

calc                 : 0
calc_2               : 11 12 22 23 23
do_statement         : 13
else_statement       : 9
empty                : 8
expression           : 7 9 10 13 21 24 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 38
if                   : 2 16
if_else              : 1 15
print                : 5 14 19
read                 : 4 18
then_statement       : 9 10
var_assign           : 6 20
while_do             : 3 17

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . if_else
    (2) calc -> . if
    (3) calc -> . while_do
    (4) calc -> . read TERM
    (5) calc -> . print TERM
    (6) calc -> . var_assign TERM
    (7) calc -> . expression
    (8) calc -> . empty
    (9) if_else -> . IF LEFT_PAR expression RIGHT_PAR then_statement else_statement
    (10) if -> . IF LEFT_PAR expression RIGHT_PAR then_statement
    (13) while_do -> . WHILE LEFT_PAR expression RIGHT_PAR do_statement
    (25) read -> . NAME EQUALS INPUT
    (26) print -> . PRINT LEFT_PAR expression RIGHT_PAR
    (24) var_assign -> . NAME EQUALS expression
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME
    (42) empty -> .

    IF              shift and go to state 8
    WHILE           shift and go to state 16
    NAME            shift and go to state 11
    PRINT           shift and go to state 1
    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    $end            reduce using rule 42 (empty -> .)

    if                             shift and go to state 6
    if_else                        shift and go to state 7
    while_do                       shift and go to state 9
    empty                          shift and go to state 2
    var_assign                     shift and go to state 12
    read                           shift and go to state 13
    print                          shift and go to state 5
    calc                           shift and go to state 15
    expression                     shift and go to state 17

state 1

    (26) print -> PRINT . LEFT_PAR expression RIGHT_PAR

    LEFT_PAR        shift and go to state 18


state 2

    (8) calc -> empty .

    $end            reduce using rule 8 (calc -> empty .)


state 3

    (38) expression -> MINUS . expression
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 19

state 4

    (37) expression -> LEFT_PAR . expression RIGHT_PAR
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 21

state 5

    (5) calc -> print . TERM

    TERM            shift and go to state 22


state 6

    (2) calc -> if .

    $end            reduce using rule 2 (calc -> if .)


state 7

    (1) calc -> if_else .

    $end            reduce using rule 1 (calc -> if_else .)


state 8

    (9) if_else -> IF . LEFT_PAR expression RIGHT_PAR then_statement else_statement
    (10) if -> IF . LEFT_PAR expression RIGHT_PAR then_statement

    LEFT_PAR        shift and go to state 23


state 9

    (3) calc -> while_do .

    $end            reduce using rule 3 (calc -> while_do .)


state 10

    (39) expression -> INT .

    RIGHT_PAR       reduce using rule 39 (expression -> INT .)
    MULTIPLY        reduce using rule 39 (expression -> INT .)
    DIVIDE          reduce using rule 39 (expression -> INT .)
    PLUS            reduce using rule 39 (expression -> INT .)
    MINUS           reduce using rule 39 (expression -> INT .)
    LESSTHAN        reduce using rule 39 (expression -> INT .)
    LESSTHANEQ      reduce using rule 39 (expression -> INT .)
    GREATTHAN       reduce using rule 39 (expression -> INT .)
    GREATTHANEQ     reduce using rule 39 (expression -> INT .)
    NOTEQUAL        reduce using rule 39 (expression -> INT .)
    ISEQUAL         reduce using rule 39 (expression -> INT .)
    $end            reduce using rule 39 (expression -> INT .)
    TERM            reduce using rule 39 (expression -> INT .)
    LEFT_KEY        reduce using rule 39 (expression -> INT .)
    IF              reduce using rule 39 (expression -> INT .)
    WHILE           reduce using rule 39 (expression -> INT .)
    NAME            reduce using rule 39 (expression -> INT .)
    PRINT           reduce using rule 39 (expression -> INT .)
    LEFT_PAR        reduce using rule 39 (expression -> INT .)
    INT             reduce using rule 39 (expression -> INT .)
    FLOAT           reduce using rule 39 (expression -> INT .)
    ELSE            reduce using rule 39 (expression -> INT .)
    RIGHT_KEY       reduce using rule 39 (expression -> INT .)


state 11

    (25) read -> NAME . EQUALS INPUT
    (24) var_assign -> NAME . EQUALS expression
    (41) expression -> NAME .

    EQUALS          shift and go to state 24
    MULTIPLY        reduce using rule 41 (expression -> NAME .)
    DIVIDE          reduce using rule 41 (expression -> NAME .)
    PLUS            reduce using rule 41 (expression -> NAME .)
    MINUS           reduce using rule 41 (expression -> NAME .)
    LESSTHAN        reduce using rule 41 (expression -> NAME .)
    LESSTHANEQ      reduce using rule 41 (expression -> NAME .)
    GREATTHAN       reduce using rule 41 (expression -> NAME .)
    GREATTHANEQ     reduce using rule 41 (expression -> NAME .)
    NOTEQUAL        reduce using rule 41 (expression -> NAME .)
    ISEQUAL         reduce using rule 41 (expression -> NAME .)
    LEFT_KEY        reduce using rule 41 (expression -> NAME .)
    IF              reduce using rule 41 (expression -> NAME .)
    WHILE           reduce using rule 41 (expression -> NAME .)
    NAME            reduce using rule 41 (expression -> NAME .)
    PRINT           reduce using rule 41 (expression -> NAME .)
    LEFT_PAR        reduce using rule 41 (expression -> NAME .)
    INT             reduce using rule 41 (expression -> NAME .)
    FLOAT           reduce using rule 41 (expression -> NAME .)
    RIGHT_KEY       reduce using rule 41 (expression -> NAME .)
    ELSE            reduce using rule 41 (expression -> NAME .)
    $end            reduce using rule 41 (expression -> NAME .)


state 12

    (6) calc -> var_assign . TERM

    TERM            shift and go to state 25


state 13

    (4) calc -> read . TERM

    TERM            shift and go to state 26


state 14

    (40) expression -> FLOAT .

    RIGHT_PAR       reduce using rule 40 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 40 (expression -> FLOAT .)
    DIVIDE          reduce using rule 40 (expression -> FLOAT .)
    PLUS            reduce using rule 40 (expression -> FLOAT .)
    MINUS           reduce using rule 40 (expression -> FLOAT .)
    LESSTHAN        reduce using rule 40 (expression -> FLOAT .)
    LESSTHANEQ      reduce using rule 40 (expression -> FLOAT .)
    GREATTHAN       reduce using rule 40 (expression -> FLOAT .)
    GREATTHANEQ     reduce using rule 40 (expression -> FLOAT .)
    NOTEQUAL        reduce using rule 40 (expression -> FLOAT .)
    ISEQUAL         reduce using rule 40 (expression -> FLOAT .)
    $end            reduce using rule 40 (expression -> FLOAT .)
    TERM            reduce using rule 40 (expression -> FLOAT .)
    LEFT_KEY        reduce using rule 40 (expression -> FLOAT .)
    IF              reduce using rule 40 (expression -> FLOAT .)
    WHILE           reduce using rule 40 (expression -> FLOAT .)
    NAME            reduce using rule 40 (expression -> FLOAT .)
    PRINT           reduce using rule 40 (expression -> FLOAT .)
    LEFT_PAR        reduce using rule 40 (expression -> FLOAT .)
    INT             reduce using rule 40 (expression -> FLOAT .)
    FLOAT           reduce using rule 40 (expression -> FLOAT .)
    ELSE            reduce using rule 40 (expression -> FLOAT .)
    RIGHT_KEY       reduce using rule 40 (expression -> FLOAT .)


state 15

    (0) S' -> calc .



state 16

    (13) while_do -> WHILE . LEFT_PAR expression RIGHT_PAR do_statement

    LEFT_PAR        shift and go to state 27


state 17

    (7) calc -> expression .
    (27) expression -> expression . MULTIPLY expression
    (28) expression -> expression . DIVIDE expression
    (29) expression -> expression . PLUS expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . LESSTHAN expression
    (32) expression -> expression . LESSTHANEQ expression
    (33) expression -> expression . GREATTHAN expression
    (34) expression -> expression . GREATTHANEQ expression
    (35) expression -> expression . NOTEQUAL expression
    (36) expression -> expression . ISEQUAL expression

    $end            reduce using rule 7 (calc -> expression .)
    MULTIPLY        shift and go to state 37
    DIVIDE          shift and go to state 36
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    LESSTHAN        shift and go to state 34
    LESSTHANEQ      shift and go to state 32
    GREATTHAN       shift and go to state 35
    GREATTHANEQ     shift and go to state 33
    NOTEQUAL        shift and go to state 28
    ISEQUAL         shift and go to state 29


state 18

    (26) print -> PRINT LEFT_PAR . expression RIGHT_PAR
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 38

state 19

    (38) expression -> MINUS expression .
    (27) expression -> expression . MULTIPLY expression
    (28) expression -> expression . DIVIDE expression
    (29) expression -> expression . PLUS expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . LESSTHAN expression
    (32) expression -> expression . LESSTHANEQ expression
    (33) expression -> expression . GREATTHAN expression
    (34) expression -> expression . GREATTHANEQ expression
    (35) expression -> expression . NOTEQUAL expression
    (36) expression -> expression . ISEQUAL expression

    RIGHT_PAR       reduce using rule 38 (expression -> MINUS expression .)
    PLUS            reduce using rule 38 (expression -> MINUS expression .)
    MINUS           reduce using rule 38 (expression -> MINUS expression .)
    LESSTHAN        reduce using rule 38 (expression -> MINUS expression .)
    LESSTHANEQ      reduce using rule 38 (expression -> MINUS expression .)
    GREATTHAN       reduce using rule 38 (expression -> MINUS expression .)
    GREATTHANEQ     reduce using rule 38 (expression -> MINUS expression .)
    NOTEQUAL        reduce using rule 38 (expression -> MINUS expression .)
    ISEQUAL         reduce using rule 38 (expression -> MINUS expression .)
    $end            reduce using rule 38 (expression -> MINUS expression .)
    TERM            reduce using rule 38 (expression -> MINUS expression .)
    LEFT_KEY        reduce using rule 38 (expression -> MINUS expression .)
    IF              reduce using rule 38 (expression -> MINUS expression .)
    WHILE           reduce using rule 38 (expression -> MINUS expression .)
    NAME            reduce using rule 38 (expression -> MINUS expression .)
    PRINT           reduce using rule 38 (expression -> MINUS expression .)
    LEFT_PAR        reduce using rule 38 (expression -> MINUS expression .)
    INT             reduce using rule 38 (expression -> MINUS expression .)
    FLOAT           reduce using rule 38 (expression -> MINUS expression .)
    ELSE            reduce using rule 38 (expression -> MINUS expression .)
    RIGHT_KEY       reduce using rule 38 (expression -> MINUS expression .)
    MULTIPLY        shift and go to state 37
    DIVIDE          shift and go to state 36

  ! MULTIPLY        [ reduce using rule 38 (expression -> MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 38 (expression -> MINUS expression .) ]
  ! PLUS            [ shift and go to state 30 ]
  ! MINUS           [ shift and go to state 31 ]
  ! LESSTHAN        [ shift and go to state 34 ]
  ! LESSTHANEQ      [ shift and go to state 32 ]
  ! GREATTHAN       [ shift and go to state 35 ]
  ! GREATTHANEQ     [ shift and go to state 33 ]
  ! NOTEQUAL        [ shift and go to state 28 ]
  ! ISEQUAL         [ shift and go to state 29 ]


state 20

    (41) expression -> NAME .

    RIGHT_PAR       reduce using rule 41 (expression -> NAME .)
    MULTIPLY        reduce using rule 41 (expression -> NAME .)
    DIVIDE          reduce using rule 41 (expression -> NAME .)
    PLUS            reduce using rule 41 (expression -> NAME .)
    MINUS           reduce using rule 41 (expression -> NAME .)
    LESSTHAN        reduce using rule 41 (expression -> NAME .)
    LESSTHANEQ      reduce using rule 41 (expression -> NAME .)
    GREATTHAN       reduce using rule 41 (expression -> NAME .)
    GREATTHANEQ     reduce using rule 41 (expression -> NAME .)
    NOTEQUAL        reduce using rule 41 (expression -> NAME .)
    ISEQUAL         reduce using rule 41 (expression -> NAME .)
    $end            reduce using rule 41 (expression -> NAME .)
    TERM            reduce using rule 41 (expression -> NAME .)
    LEFT_KEY        reduce using rule 41 (expression -> NAME .)
    IF              reduce using rule 41 (expression -> NAME .)
    WHILE           reduce using rule 41 (expression -> NAME .)
    NAME            reduce using rule 41 (expression -> NAME .)
    PRINT           reduce using rule 41 (expression -> NAME .)
    LEFT_PAR        reduce using rule 41 (expression -> NAME .)
    INT             reduce using rule 41 (expression -> NAME .)
    FLOAT           reduce using rule 41 (expression -> NAME .)
    ELSE            reduce using rule 41 (expression -> NAME .)
    RIGHT_KEY       reduce using rule 41 (expression -> NAME .)


state 21

    (37) expression -> LEFT_PAR expression . RIGHT_PAR
    (27) expression -> expression . MULTIPLY expression
    (28) expression -> expression . DIVIDE expression
    (29) expression -> expression . PLUS expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . LESSTHAN expression
    (32) expression -> expression . LESSTHANEQ expression
    (33) expression -> expression . GREATTHAN expression
    (34) expression -> expression . GREATTHANEQ expression
    (35) expression -> expression . NOTEQUAL expression
    (36) expression -> expression . ISEQUAL expression

    RIGHT_PAR       shift and go to state 39
    MULTIPLY        shift and go to state 37
    DIVIDE          shift and go to state 36
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    LESSTHAN        shift and go to state 34
    LESSTHANEQ      shift and go to state 32
    GREATTHAN       shift and go to state 35
    GREATTHANEQ     shift and go to state 33
    NOTEQUAL        shift and go to state 28
    ISEQUAL         shift and go to state 29


state 22

    (5) calc -> print TERM .

    $end            reduce using rule 5 (calc -> print TERM .)


state 23

    (9) if_else -> IF LEFT_PAR . expression RIGHT_PAR then_statement else_statement
    (10) if -> IF LEFT_PAR . expression RIGHT_PAR then_statement
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 40

state 24

    (25) read -> NAME EQUALS . INPUT
    (24) var_assign -> NAME EQUALS . expression
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    INPUT           shift and go to state 41
    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 42

state 25

    (6) calc -> var_assign TERM .

    $end            reduce using rule 6 (calc -> var_assign TERM .)


state 26

    (4) calc -> read TERM .

    $end            reduce using rule 4 (calc -> read TERM .)


state 27

    (13) while_do -> WHILE LEFT_PAR . expression RIGHT_PAR do_statement
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 43

state 28

    (35) expression -> expression NOTEQUAL . expression
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 44

state 29

    (36) expression -> expression ISEQUAL . expression
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 45

state 30

    (29) expression -> expression PLUS . expression
    (27) expression -> . expression MULTIPLY expression
    (28) expression -> . expression DIVIDE expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQ expression
    (33) expression -> . expression GREATTHAN expression
    (34) expression -> . expression GREATTHANEQ expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression ISEQUAL expression
    (37) expression -> . LEFT_PAR expression RIGHT_PAR
    (38) expression -> . MINUS expression
    (39) expression -> . INT
    (40) expression -> . FLOAT
    (41) expression -> . NAME

    LEFT_PAR        shift and go to state 4
    MINUS           shift and go to state 3
    INT             shift and go to state 10
    FLOAT           shift and go to state 14
    NAME            shift and go to state 20

    expression                     shift and go to state 46

state 31
